<resources>
    <string name="app_name">Sanjivani</string>
    <string name="splash_screen_heading">Register Phone Number</string>
    <string name="login_screed_heading">Login</string>
    <string name="phone_number_hint">Enter Phone Number</string>
    <string name="opt_hint">Enter OTP</string>
    <string name="send_otp_button">Send OTP</string>
    <string name="register_button">register</string>
    <string name="enter_email">Email</string>
    <string name="setting_screen_appbar_text">Settings</string>
    <string name="edit_profile_appbar_text">Settings</string>
    <string name="login_button">login</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="register_now_text_view">register now</string>
    <string name="splash_image_content_description">splash screen image</string>
    <string name="google_sign_up_text">Google Sign Up Page</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="resend_otp">Re-Send OTP</string>
    <string name="capture_user_info_heading">One Last Step...</string>
    <string name="user_info_name">Enter your Full Name</string>
    <string name="user_info_email">Enter your email address</string>
    <string name="pin_code">PinCode</string>
    <string name="rs_symbol">₹ </string>
    <string name="flat_number">Flat No.</string>
    <string name="building">Building</string>
    <string name="street">Street (Optional)</string>
    <string name="closest_landmark">Closest Landmark</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="user_info_address">Enter your address</string>
    <string name="user_info_create_profile_button">create profile</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="create_profile">Create Profile</string>
    <string name="app_bar_text_size">22dp</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_navigation">NavigationActivity</string>

</resources>
